--- a/Views/Web.config
+++ b/Views/Web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="Syncfusion.MVC.EJ"/>
+        <add namespace="Syncfusion.JavaScript"/>
         <add namespace="WebApplication1" />
       </namespaces>
     </pages>
