--- a/packages.config
+++ b/packages.config
@@ -38,4 +38,7 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="Syncfusion.EJ" version="15.1450.0.33" targetFramework="net45" />
+  <package id="Syncfusion.EJ.MVC" version="15.1400.0.33" targetFramework="net45" />
+  <package id="Syncfusion.Grid.Mvc" version="15.1400.0.33" targetFramework="net45" />
 </packages>
