--- a/packages.config
+++ b/packages.config
@@ -41,4 +41,5 @@
   <package id="Syncfusion.EJ" version="15.1450.0.33" targetFramework="net45" />
   <package id="Syncfusion.EJ.MVC" version="15.1400.0.33" targetFramework="net45" />
   <package id="Syncfusion.Grid.Mvc" version="15.1400.0.33" targetFramework="net45" />
+  <package id="Syncfusion.Linq.Base" version="15.1450.0.33" targetFramework="net45" />
 </packages>
