--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -86,6 +86,9 @@
     <Reference Include="Syncfusion.Grid.Mvc">
       <HintPath>..\packages\Syncfusion.Grid.Mvc.15.1400.0.33\lib\net45\Syncfusion.Grid.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="Syncfusion.Linq.Base">
+      <HintPath>..\packages\Syncfusion.Linq.Base.15.1450.0.33\lib\net45\Syncfusion.Linq.Base.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
